--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,15 @@ edition = "2021"
 opt-level = 3
 
 [dependencies]
+anyhow = "1.0.66"
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
 itertools = "0.10.5"
 regex = "1"
 lazy_static = "1.4.0"
 num = "0.4.0"
-pathfinding = "3.0.14"
+pathfinding = "4.0.0"
 serde_json = "1.0"
 permutator = "0.4.3"
 memoize = "0.3.1"
+thiserror = "1.0.37"
